<resources>
    <string name="app_name">NaviRice</string>
    <string name="source">Source</string>
    <string name="destination">Destination</string>
    <string name="start">Start Navigation</string>
    <string name="next">Next</string>
    <string name="server_ip">Server IP</string>
    <string name="server_port">Server Port</string>
    <string name="connect">Connect</string>
    <string name="connecting">Connecting&#8230;</string>
    <string name="connected">Connected</string>
    <string name="fail_to_connect">Fail to connect to server</string>
</resources>
