<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/text_field_server_ip"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_field_height"
        android:text="@string/rendering_server_ip"
        android:hint="@string/server_ip" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/text_field_server_port"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_field_height"
        android:text="@string/rendering_server_port"
        android:hint="@string/server_port" />

    <Button
        android:id="@+id/connect_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:text="@string/connect"/>

    <android.support.design.widget.TextInputEditText
        android:id="@+id/text_field_source"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_field_height"
        android:hint="@string/source" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/text_field_destination"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_field_height"
        android:text="Boston, MA"
        android:hint="@string/destination" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:text="@string/start"/>
</android.widget.LinearLayout>